--- a/assets/css/repottingstyles.css
+++ b/assets/css/repottingstyles.css
@@ -5,6 +5,9 @@ html {
 body {
   background: url("../img/background/repotting.jpg") fixed;
 }
+main {
+  font-size: 125px;
+}
 header {
   text-align: center;
   width: 75%;
