--- a/assets/css/stylesrepottingspecies.css
+++ b/assets/css/stylesrepottingspecies.css
@@ -46,6 +46,9 @@ border-spacing: 0;
 #repotting-ferocactus-stainesii {
     background: url("../img/background/ferocactusstainesii.jpg") fixed;
 }
+#repotting-lithops {
+    background: url("../img/background/lithops.jpg") fixed;
+}
 #repotting-notocactus-magnificus {
     background: url("../img/background/notocactus.jpg") fixed;
 }
@@ -116,7 +119,7 @@ main {                                                                  /* CONTI
     margin: auto;
     height: 675px;
     border: 2px solid black;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255,255,255,0.4);
     margin-top: 15px;
     padding-top: 15px;
 }
