--- a/assets/css/stylesrepottingspecies.css
+++ b/assets/css/stylesrepottingspecies.css
@@ -57,6 +57,9 @@ border-spacing: 0;
 #repotting-crassula-pyramidalis {
     background: url("../img/background/crassulapyramidalis.jpg") fixed;
 }
+#repotting-echinopsis-subdenudata {
+    background: url("../img/background/echinopsissubdenudata.jpg") fixed;
+}
 #repotting-euphorbia-decaryi {
     background: url("../img/background/euphorbiadecaryi.jpg") fixed;
 }
